<resources>
    <string name="app_name">AllMyReview</string>
    <string name="title_home">Home</string>
    <string name="title_review">Review</string>
    <string name="title_user">User</string>

    <string name="popular_movie">Top 인기 영화</string>
    <string name="new_movie">Top 최신 영화</string>
    <string name="releaseDateText">개봉일</string>
    <string name="starText">별점</string>
    <string name="nameText">제목</string>
    <string name="genresText">장르</string>
    <string name="runTimeText">상영시간</string>

    <string name="reviewIsNone">작성된 리뷰가 없어요:\'(</string>
    <string name="addReview">리뷰 작성 하러 가기</string>
    <string name="wouldaddReview">리뷰 작성 하러 가볼까요?</string>
    <string name="writeReview">리뷰를 작성해 주세요..</string>
    <string name="writePlace">시청 장소를 작성해 주세요..</string>
    <string name="addReviewtoDb">리뷰 저장하기</string>
    <string name="MyReaview">나의 모든 리뷰</string>
    <string name="pleaseLogin">로그인 후 리뷰를 확인해 주세요</string>
    <string name="search">어떤 영화를 찾으시나요?</string>

    <string name="UserName">이름</string>
    <string name="UserId">아이디</string>
    <string name="UserEmail">이메일</string>
    <string name="UserPassword">비밀번호</string>
    <string name="UserPasswordCheck">비밀번호 확인</string>
    <string name="check">확인</string>
    <string name="cancel">취소</string>
    <string name="signUp">회원 가입</string>
    <string name="LogIn">로그인</string>
    <string name="idcheck">아이디 확인을 진행해주세요.</string>
    <string name="LoginFailed">이메일 혹은 비밀번호를 확인해주세요.</string>
    <string name="Logout">로그아웃</string>
    <string name="upadte">수정</string>
    <string name="delete">삭제</string>
    <string name="UserUpdate">프로필 수정하기</string>


</resources>