<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.SignUpActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/signUp"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/join_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:ems="10"
        android:hint="@string/UserName"
        android:inputType="textPersonName"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <EditText
        android:id="@+id/join_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/UserId"
        android:inputType="text"
        android:maxLines="1"
        app:layout_constraintStart_toStartOf="@+id/join_name"
        app:layout_constraintTop_toBottomOf="@+id/join_name" />


    <EditText
        android:id="@+id/join_email"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/UserEmail"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        app:layout_constraintStart_toStartOf="@+id/idRes"
        app:layout_constraintTop_toBottomOf="@+id/idRes" />


    <TextView
        android:id="@+id/idRes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/idcheck"
        app:layout_constraintStart_toStartOf="@+id/join_id"
        app:layout_constraintTop_toBottomOf="@+id/join_id" />

    <Button
        android:id="@+id/check_button"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:text="@string/check"
        android:textSize="13sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/join_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/join_id" />


    <EditText
        android:id="@+id/join_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/UserPassword"
        android:inputType="textPassword"
        android:maxLines="1"
        app:layout_constraintStart_toStartOf="@+id/join_email"
        app:layout_constraintTop_toBottomOf="@+id/join_email" />

    <EditText
        android:id="@+id/join_pwck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/UserPasswordCheck"
        android:inputType="textPassword"
        android:maxLines="1"
        app:layout_constraintStart_toStartOf="@+id/join_password"
        app:layout_constraintTop_toBottomOf="@+id/join_password" />


    <Button
        android:id="@+id/join_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/signUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/join_pwck" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="cancelBtn"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/join_button" />

</androidx.constraintlayout.widget.ConstraintLayout>