<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">


    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        tools:ignore="ScrollViewCount">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/layoutTop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/serach_Textview"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_centerVertical="true"
                    android:layout_marginHorizontal="20dp"
                    android:layout_toLeftOf="@+id/userButton"
                    android:background="@drawable/outline"
                    android:drawableStart="@drawable/baseline_search_24"
                    android:drawablePadding="0dp"
                    android:gravity="center_vertical"
                    android:paddingHorizontal="20dp"
                    android:text="@string/search" />

                <ImageView
                    android:id="@+id/userButton"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="10dp"
                    android:background="@drawable/baseline_account_circle_24"
                    android:backgroundTint="@color/purpleBlue" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_pop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layoutTop"
                android:layout_marginTop="10dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp">

                <TextView
                    android:id="@+id/text_popularMoview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/popular_movie"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/popularMovie_recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_popularMoview"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_new"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_pop"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="30dp">

                <TextView
                    android:id="@+id/text_newMovie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/new_movie"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/newMoview_recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_newMovie"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal" />
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>

    <!--    <TextView
            android:id="@+id/textHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_new" />-->
</androidx.constraintlayout.widget.ConstraintLayout>