<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".movieDetail.MovieDetailActivity">

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/relativeLayout2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintDimensionRatio="1:0.5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/movie_poster"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:alpha="0.5" />

                <TextView
                    android:id="@+id/movie_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/movie_Original_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/movie_title"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                android:padding="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/relativeLayout2">

                <TextView
                    android:id="@+id/movie_tagLine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/movie_overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/movie_tagLine"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

            </RelativeLayout>

            <View
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/lightGray"
                app:layout_constraintTop_toBottomOf="@+id/relativeLayout3" />

            <RelativeLayout
                android:id="@+id/relativeLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                app:layout_constraintTop_toBottomOf="@+id/view1">

                <LinearLayout
                    android:id="@+id/infoLay"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/releaseTextview"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/releaseDateText" />

                    <TextView
                        android:id="@+id/genresTextview"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/genresText" />

                    <TextView
                        android:id="@+id/runTimeTextview"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/releaseDateText" />

                    <TextView
                        android:id="@+id/starTextview"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/starText" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/infoLay"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/movie_release_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/movie_genres"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/movie_runnigTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/movie_star"
                        android:drawableStart="@drawable/round_star_24"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:textColor="@color/black"
                        android:textSize="15sp" />


                </LinearLayout>


            </RelativeLayout>

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginHorizontal="10dp"
                android:background="@color/lightGray"
                app:layout_constraintTop_toBottomOf="@+id/relativeLayout4" />

            <RelativeLayout
                android:onClick="gotoDetailReview"
                android:id="@+id/relativeLayout5"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/outline"
                app:layout_constraintDimensionRatio="4:1"
                app:layout_constraintTop_toBottomOf="@+id/view2"
                tools:layout_editor_absoluteX="15dp"
                android:drawablePadding="5dp"
                >

                <TextView
                    android:id="@+id/reviewText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_toLeftOf="@+id/goImg"
                    android:layout_margin="20dp"
                    android:maxLines="2"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:text="@string/reviewIsNone" />

                <ImageView
                    android:id="@+id/goImg"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:background="@drawable/baseline_arrow_forward_ios_24"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:backgroundTint="@color/purpleBlue"
                    />

            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/gotowriteBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/addReview"
                android:layout_margin="20dp"
                android:background="@drawable/round"
                android:onClick="addReviewBtn"
                app:layout_constraintTop_toBottomOf="@+id/relativeLayout5" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>